typos and play store listing

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stylo - turn an old phone into a hardware wallet</title>
+    <title>Stylo - turn your old phone into a hardware wallet</title>
     <meta
       name="description"
-      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama or any other substrate-base blockchain."
+      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama, or any other substrate-base blockchain."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Stylo - turn an old phone into a hardware wallet" />
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama or any other substrate-base blockchain."
+      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama, or any other substrate-base blockchain."
     />
     <link rel="shortcut icon" href="favicon.ico">
     <style>
@@ -181,7 +181,7 @@
                 </div>
               <div id="titles">
                   <h1>Stylo</h1>
-                  <h2>Use a smartphone as a hardware wallet to manage Kusama, Polkadot and other crypto accounts.</h2>
+                  <h2>Use a smartphone as a hardware wallet to manage Polkadot, Kusama, and other crypto accounts.</h2>
                 </div>
           </div>
       </div>
@@ -199,7 +199,7 @@
             <span class="buttonText">Download from GitHub</span>
           </div>
         </a>
-        <!-- <a class="button" href="">
+        <a class="button" href="https://play.google.com/store/apps/details?id=com.styloapp">
           <div class="insideButton">
             <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline">                  
                 <g>
@@ -226,18 +226,18 @@
                     </g>
                 </g>
             </svg>
-            <span class="buttonText">Download from Playsore</span>
+            <span class="buttonText">Download from Play store</span>
           </div>
-        </a> -->
+        </a>
       </div>
 
       <p>
-        Stylo is a mobile application meant to be installed on a phone that should remain offline. Stylo allows to create, recover and manage acounts. Using QR codes to scan a transaction, the app allows to review and sign any transaction offline. 
+        Stylo is a mobile application meant to be installed on a phone that should remain offline. Stylo allows to create, recover and manage accounts. Using QR codes to scan a transaction, the app allows to review and sign any transaction offline. 
       </p>
 
       <p>Learn how to use it by following a tutorial: <a target="_blank" href="https://github.com/stylo-app/stylo/blob/main/docs/tutorials/Kusama-tutorial.md/">Using Stylo for Polkadot or Kusama</a>.</p>
       <p>This application is open source and the code is available on <a target="_blank" href="https://github.com/stylo-app/stylo">GitHub</a>.</p>
-      <p>Folluw us on <a target="_blank" href="https://twitter.com/app_stylo">Twitter</a>.</p>
+      <p>Follow us on <a target="_blank" href="https://twitter.com/app_stylo">Twitter</a>.</p>
     </div>
     <script>
       if (window.self !== window.top) {
