--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stylo - turn your old phone into a hardware wallet</title>
+    <title>Stylo - Keep your funds safe, offline.</title>
     <meta
       name="description"
-      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama, or any other substrate-base blockchain."
+      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama, or any other substrate-based blockchain."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Stylo - turn an old phone into a hardware wallet" />
-    <meta property="og:url" content="https://stylo-app.github.io/website" />
+    <meta property="og:title" content="Stylo - Keep your funds safe, offline." />
+    <meta property="og:url" content="https://stylo-app.com" />
     <meta property="og:image" content="./logo.png" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama, or any other substrate-base blockchain."
+      content="Stylo is a mobile application meant to be used offline to manage accounts for Polkadot, Kusama, or any other substrate-based blockchain."
     />
     <link rel="shortcut icon" href="favicon.ico">
     <style>
@@ -235,7 +235,7 @@
         Stylo is a mobile application meant to be installed on a phone that should remain offline. Stylo allows to create, recover and manage accounts. Using QR codes to scan a transaction, the app allows to review and sign any transaction offline. 
       </p>
 
-      <p>Learn how to use it by following a tutorial: <a target="_blank" href="https://github.com/stylo-app/stylo/blob/main/docs/tutorials/Kusama-tutorial.md/">Using Stylo for Polkadot or Kusama</a>.</p>
+      <p>Learn how to use it by following a tutorial: <a target="_blank" href="https://github.com/stylo-app/stylo/blob/main/docs/tutorials/Kusama-tutorial.md/">How to use Stylo with Polkadot or Kusama</a>.</p>
       <p>This application is open source and the code is available on <a target="_blank" href="https://github.com/stylo-app/stylo">GitHub</a>.</p>
       <p>Follow us on <a target="_blank" href="https://twitter.com/app_stylo">Twitter</a>.</p>
     </div>
