--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Stylo - Keep your funds safe, offline." />
     <meta property="og:url" content="https://stylo-app.com" />
-    <meta property="og:image" content="./logo.png" />
+    <meta property="og:image" content="https://stylo-app.com/logo.png" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
