--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         </a>
       </div>
 
+      <h3>⚠️ This project is not maintained any more. <a target="_blank" href="https://github.com/stylo-app/stylo#%EF%B8%8F-this-project-is-not-maintained-any-more">Read more here</a>.</h3>
       <p>
         Stylo is a mobile application meant to be installed on a phone that should remain offline. Stylo allows to create, recover and manage accounts. Using QR codes to scan a transaction, the app allows to review and sign any transaction offline. 
       </p>
